--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,16 @@ steps:
     command: build
     arguments: '--no-restore --configuration release'
     projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration release --output $(Build.ArtiactStagingDirectory)/Release'
+    zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Build Artifact - drop'
+  condition: succeeded()
