--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,20 +13,21 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
+  dotnetSdkVersion: '3.1.300'
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET Core SDK 3.1.300'
+  displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs: 
-    packageType: sdk
-    version: 3.1.300
+    version: '$(dotnetSdkVersion)'
 
 - task: Npm@1
   displayName: 'Run NPM install'
   inputs:
     Verbose: false
 
-- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+- script: './node_modules/.bin/node-sass $(wwwrooDir) --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile SASS assets'
 
 - task: Gulp@1
